[gd_scene load_steps=27 format=3 uid="uid://cq5fo8lp2wpc0"]

[ext_resource type="Texture2D" uid="uid://dj1g41scwq7bv" path="res://art/characters/slime.png" id="1_ri4nt"]
[ext_resource type="Script" path="res://scripts/enemy.gd" id="1_u7qum"]
[ext_resource type="Texture2D" path="res://art/characters/slime-red.png" id="2_4itfc"]

[sub_resource type="CircleShape2D" id="CircleShape2D_i7cqb"]
radius = 5.0

[sub_resource type="AtlasTexture" id="AtlasTexture_l3o4h"]
atlas = ExtResource("2_4itfc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hic3r"]
atlas = ExtResource("2_4itfc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ud12p"]
atlas = ExtResource("2_4itfc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlpuj"]
atlas = ExtResource("2_4itfc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xx8gy"]
atlas = ExtResource("1_ri4nt")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b4to"]
atlas = ExtResource("1_ri4nt")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rin76"]
atlas = ExtResource("1_ri4nt")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4b7n"]
atlas = ExtResource("1_ri4nt")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_camdh"]
atlas = ExtResource("1_ri4nt")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8kye"]
atlas = ExtResource("1_ri4nt")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfcyh"]
atlas = ExtResource("1_ri4nt")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pv1mf"]
atlas = ExtResource("1_ri4nt")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebxa0"]
atlas = ExtResource("1_ri4nt")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ebgr"]
atlas = ExtResource("1_ri4nt")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkla0"]
atlas = ExtResource("1_ri4nt")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xswa7"]
atlas = ExtResource("1_ri4nt")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ju38"]
atlas = ExtResource("1_ri4nt")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdhah"]
atlas = ExtResource("1_ri4nt")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrnvv"]
atlas = ExtResource("1_ri4nt")
region = Rect2(160, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_wwls0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3o4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hic3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ud12p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlpuj")
}],
"loop": true,
"name": &"dammage",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xx8gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b4to")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rin76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4b7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_camdh")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8kye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfcyh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pv1mf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebxa0")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ebgr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkla0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xswa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ju38")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdhah")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrnvv")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_65rwg"]
radius = 47.0106

[sub_resource type="CircleShape2D" id="CircleShape2D_swng2"]
radius = 16.4924

[node name="enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 11
script = ExtResource("1_u7qum")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_i7cqb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_wwls0")
animation = &"idle"
offset = Vector2(2.08165e-12, -6)

[node name="detectionofPlayer_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionofPlayer_area"]
shape = SubResource("CircleShape2D_65rwg")

[node name="playerCanAttack_area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="playerCanAttack_area"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_swng2")

[node name="healthBar" type="ProgressBar" parent="."]
visible = false
modulate = Color(0.156863, 0.784314, 0.360784, 1)
offset_left = -6.0
offset_top = -13.0
offset_right = 124.0
offset_bottom = 14.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="takeDamageCooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="reginTimer" type="Timer" parent="."]
wait_time = 4.138

[connection signal="body_entered" from="detectionofPlayer_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detectionofPlayer_area" to="." method="_on_detection_area_body_exited"]
[connection signal="body_entered" from="playerCanAttack_area" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="playerCanAttack_area" to="." method="_on_enemy_hitbox_body_exited"]
[connection signal="timeout" from="takeDamageCooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="timeout" from="reginTimer" to="." method="_on_regin_timer_timeout"]
